syntax = "proto3";
package Vodamep.Agp;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Vodamep.Agp.Model";

message AgpReport {   
    Institution institution = 1;   
    google.protobuf.Timestamp from = 2;
    google.protobuf.Timestamp to = 3;
    repeated Staff staffs = 4; 
    repeated Person persons = 5;         
    repeated Activity activities = 6;     
    repeated StaffActivity staff_activities = 7;     
}

// Einrichtung
message Institution {
    string id = 1;
    string name = 2;    
}

// Mitarbeiter, die im Zeitraum eine Leistung erbracht haben
message Staff {
    string id = 1;    
    string family_name = 3;
    string given_name = 4;    
}

// Personen, die im Zeitraum eine Leistung bezogen haben
message Person {
    string id = 1;        
    string family_name = 2;
    string given_name = 3;    
    google.protobuf.Timestamp birthday = 4;
	Gender gender = 5;
    string postcode = 6;				// postcode und city m√ºssen zusammen einem Wert aus der Liste der Orte entsprechen
    string city = 7;
	CareAllowance care_allowance = 8;   // Pflegegeld, zum Stichtag Bis-Datum der Meldung
	string insurance = 9;               // Ein Wert aus der Liste der Sozialversicherungen
    Referrer referrer = 10;
    string other_referrer = 11;
    string hospital_doctor = 12;
    string local_doctor = 13;
    repeated DiagnosisGroup diagnoses = 14;
}

// Leistungen
message StaffActivity {
    string id = 1;
    google.protobuf.Timestamp date = 2;
    string staff_id = 3;
    StaffActivityType activity_type = 4; 
    int32 minutes = 5;
}


// Beschreibung in staffactivitytypes.csv
enum StaffActivityType { 
    UNDEFINED_SA = 0;
    TRAVELING_SA = 1;
    NETWORKING_SA = 2;
    QUALIFICATION_SA = 3;
    ORGANIZATION_SA = 4;
}

// Leistungen
message Activity {
    string id = 1;
    google.protobuf.Timestamp date = 2;
    string person_id = 3;
    string staff_id = 4;
    PlaceOfAction place_of_Action = 5;         // Ein Wert aus der Liste places_of_action.csv
    repeated ActivityType entries = 6; 
    int32 minutes = 7;
}

// Beschreibung in activitytypes.csv
enum ActivityType { 
    UNDEFINED_AT = 0;
    CLEARING_AT = 1;
    OBSERVATIONS_ASSESSMENT_AT = 2;
    GERIATRIC_PSYCHIATRIC_AT = 3;
    GUIDANCE_PARTNER_AT = 4;
    GUIDANCE_CLIENT_AT = 5;
    CARE_DOCUMENTATION_AT = 6;
    CONTACT_PARTNER_AT = 7;
    EXECUTION_TRANSPORT_AT = 8;
}


// Diagnosegruppen
// Beschreibung in diagnosisgroups.csv
enum DiagnosisGroup { 
    UNDEFINED_DIAGNOSIS_GROUP = 0;
    DEMENTIA_DISEASE = 1;
    AFFECTIVE_DISORDER = 2;
    SCHIZOPHRENIA_DELUSIONAL_DISORDER = 3;
    ANXIETY_ADJUSTMENT_OBSESSIVE_DISORDER = 4;
    DEPENDENCE_ILLNESSE = 5;
    NON_ORGANIC_SLEEPING_DISORDER = 6;
}


// Einsatzorte
// Beschreibung in places_of_action.csv
enum PlaceOfAction { 
    UNDEFINED_PLACE = 0;
    RESIDENCE_PLACE = 1;
    LKH_RANKWEIL_PLACE = 2;
    BASE_PLACE = 3;
    MEDICAL_ORINATION_PLACE = 4;
    OTHER_PLACE = 5;
}


// Zuweiser
// Beschreibung in referrer.csv
// Protobuf erwartet eindeutige EnumKeys, auch zwischen unterschiedlichen enums, drum der AnhhangRef
enum Referrer { 
    UNDEFINED_REFERRER = 0;
    FAMILY_DOCTOR_REFERRER = 1;
    MEDICAL_SPECIALIST_REFERRER = 2;
    RELATIVES_REFERRER = 3;
    LKH_RANKWEIL_REFERRER = 4;
    HOME_HEALTH_CARE_REFERRER = 5;
    CASE_MANAGEMENT_REFERRER = 6;
    MOBILE_CARE_SERVICE_REFERRER = 7;
    SELF_REFERRER = 8;
    OTHER_REFERRER = 9;
}


// Pflegegeld
enum CareAllowance {
  UNDEFINED_ALLOWANCE = 0;
  L1 = 1;
  L2 = 2;
  L3 = 3;
  L4 = 4;
  L5 = 5;
  L6 = 6;
  L7 = 7;	
  ANY = 9;              // Pflegegeld ja, Stufe unbekannt
  UNKNOWN = 88;         // Keine Angabe, unbekannt ob ja oder nein
  IN_PROGRESS = 90;     // In Bearbeitung
  NONE = 99;            // Kein Pflegegeld
}

enum Gender {
  UNDEFINED_GE = 0;
  MALE_GE = 1;
  FEMALE_GE = 2;
  DIVERS_GE = 3;
  INTER_GE = 4;
  OPEN_GE = 5;
}


/*
Dokumentation zu Protobuf: https://developers.google.com/protocol-buffers/
Online generator z.B. :https://protogen.marcgravell.com/
*/ 
